--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </section>
         <footer class="footer margen_interno">
             <nav class="pie">
-                <h6>DESARROLLADO POR ELIECER LEMUS - INFORTATICA - IUTAV</h6>
+                <h6>DESARROLLADO POR ELIECER LEMUS - INFORMATICA - IUTAV</h6>
             </nav>
         </footer>
     </div>   
